<resources>
    <string name="app_name">pomodorotimer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drop">DROP TABLE IF EXISTS</string>
    <string name="break_time">Break Time</string>
    <string name="work_time">Work Time</string>
    <string name="long_break_time">Long Break Time</string>
    <string name="works_before_a_long_break">Works before a long break</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="daily_goal_default">8</string>
    <string name="works_before_a_long_break_default">4</string>
    <string name="long_break_time_default">15</string>
    <string name="break_time_default">5</string>
    <string name="work_time_default">25</string>
    <string name="daily_goal_progress">Daily Goal Progress</string>
</resources>